--- a/style.css
+++ b/style.css
@@ -140,7 +140,6 @@ body{
 }
 
 .bottombar-section button{
-  width: 10rem;
   height: 3rem;
   font-size: 1rem;
   align-self: center;
@@ -156,6 +155,7 @@ body{
   grid-template-rows: 1fr;
   grid-auto-flow: column;
   justify-content: end;
+  gap: 40px;
 }
 
 .bottombar-section .large{
@@ -272,4 +272,13 @@ body{
   align-self: start;
   font-size: 0.6rem;
   color: gray;
+}
+
+.card, .announcement-list, .trending-list{
+  box-shadow: 3px 3px 3px gray;
+}
+
+.header{
+  box-shadow: 3px 0px 3px gray;
+  position: relative;
 }
